examples/c/error-codes/violates-constraint/fatal/CV-TAL1-bad-static.output
CV-TAL1-bad-static.c:7:9: error: invalid application of 'alignof' to an incomplete type 'struct foo'
        _Alignof
        ^
CV-TAL1-bad-static.c:4:8: note: forward declaration of 'struct foo'
struct foo;
       ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
